# ddnet_physics_c

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  benchmark.sh  makefile  optimizations.md  perf.sh  performace.txt  run_blue.map  run_pgo.sh  unsupported.txt
.github/workflows/: build.yml  style.yml
docs/: README.md  optimizations.md  performace.txt  unsupported.txt
examples/: CMakeLists.txt
examples/simple_tick/: CMakeLists.txt  README.md  simple_tick.c
include/: collision.h  gamecore.h  vmath.h
include/ddnet_physics/: collision.h  gamecore.h  tuning.h  vmath.h
scripts/: perf.sh  perf_annotate.py
src/: collision.c  collision.h  collision_tables.h  config.h  gamecore.c  gamecore.h  tuning.h  vmath.c  vmath.h
tests/: CMakeLists.txt  bench_intersect.c  bench_movebox.c  benchmark.c  data.h  example.c  movebox.c  utils.h  validate.c
tests/debug/: CMakeLists.txt  copy_world.c  example.c  validate.c
tests/maps/: 005.map  Aip-Gores.map  Peaceful.map  Volt.map  aip_beach.map  ctf0.map  run_Rock_that_Tee.map  stopper_test.map  test_run.map
tests/optimized/: CMakeLists.txt  benchmark.c  movebox.c
